tests/health/gateway.networking.k8s.io_Gateway/false.yaml
# expect: Degraded
# message: no address
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata: {name: example, generation: 2}
status:
  conditions:
    - {type: Programmed, status: "False", message: no address}
