tests/health/gateway.networking.k8s.io_Gateway/true.yaml
# expect: Healthy
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata: {name: example, generation: 2}
status:
  conditions:
    - {type: Programmed, status: "True"}
